--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,16 +1,20 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".StatusActivity">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/action_tweet"
         android:icon="@android:drawable/ic_menu_add"
-        android:showAsAction="never"
+        android:showAsAction="always|withText"
         android:title="@string/tweet"/>
     <item
         android:id="@+id/action_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="100"
         android:showAsAction="always|withText"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_refresh"
+        android:icon="@android:drawable/ic_menu_rotate"
+        android:showAsAction="always"
+        android:title="refresh"/>
 
 </menu>
